--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <p class="subtitle">担当　中村 担人</p>
       <ul>
         <!-- 下位ページのファイル名に合わせてリンク -->
-        <li><a href="pages/infomath.html">情報数学基礎</a></li>
-        <li><a href="pages/comp-graphics.html">コンピュータグラフィックス</a></li>
-        <li><a href="pages/visual-content.html">ビジュアルコンテンツデザイン</a></li>
+        <li><a href="pages/css_sample1.html">情報数学基礎</a></li>
+        <li><a href="pages/css_sample2.html">コンピュータグラフィックス</a></li>
+        <li><a href="pages/css_sample3.html">ビジュアルコンテンツデザイン</a></li>
       </ul>
     </div>
   </header>
@@ -25,3 +25,4 @@
   </footer>
 </body>
 </html>
+
