--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>NSの講義</title>
-<link rel="stylesheet" href="assets/common.css">
+<link rel="stylesheet" href="design.css">
 </head>
 <body>
   <header>
@@ -13,9 +13,9 @@
       <p class="subtitle">担当　中村 担人</p>
       <ul>
         <!-- 下位ページのファイル名に合わせてリンク -->
-        <li><a href="pages/css_sample1.html">情報数学基礎</a></li>
-        <li><a href="pages/css_sample2.html">コンピュータグラフィックス</a></li>
-        <li><a href="pages/css_sample3.html">ビジュアルコンテンツデザイン</a></li>
+        <li><a href="css_sample1.html">情報数学基礎</a></li>
+        <li><a href="css_sample2.html">コンピュータグラフィックス</a></li>
+        <li><a href="css_sample3.html">ビジュアルコンテンツデザイン</a></li>
       </ul>
     </div>
   </header>
