--- a/css_sample1.html
+++ b/css_sample1.html
@@ -1,6 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
+<link rel="stylesheet" href="design.css">
 <meta charset="UTF-8">
 <title>HTMLへの組み込みサンプル１</title>
    <link href="sample.css" rel="stylesheet" type="text/css">
@@ -8,4 +9,5 @@
  <body>
    <h1>Cascading Style Sheets</h1>
  </body>
+
 </html>
