--- a/css_sample2.html
+++ b/css_sample2.html
@@ -1,6 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
+   <link rel="stylesheet" href="design.css">
 <meta charset="UTF-8">
 <title>HTMLへの組み込みサンプル２</title>
 
@@ -25,3 +26,4 @@
    <h1>Cascading Style Sheets</h1>
  </body>
 </html>
+
