--- a/css_sample3.html
+++ b/css_sample3.html
@@ -1,6 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
+ <link rel="stylesheet" href="design.css">
 <meta charset="UTF-8">
 <title>HTMLへの組み込みサンプル３</title>
 </head>
@@ -19,3 +20,4 @@ sdkaskas;lka;lskd;ask
 
  </body>
 </html>
+
