--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="wrap">
       <h1>NSの講義</h1>
-      <p class="subtitle">担当　中村 担人</p>
+      <p class="subtitle">担当　中村 直人</p>
       <ul>
         <!-- 下位ページのファイル名に合わせてリンク -->
         <li><a href="css_sample1.html">情報数学基礎</a></li>
