--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>NSの講義</title>
+<title>私の趣味</title>
 <link rel="stylesheet" href="design.css">
 </head>
 <body>
   <header>
     <div class="wrap">
-      <h1>NSの講義</h1>
-      <p class="subtitle">担当　中村 直人</p>
+      <h1>私の趣味</h1>
+      <p class="subtitle">林田　武浩</p>
       <ul>
         <!-- 下位ページのファイル名に合わせてリンク -->
-        <li><a href="css_sample1.html">情報数学基礎</a></li>
-        <li><a href="css_sample2.html">コンピュータグラフィックス</a></li>
-        <li><a href="css_sample3.html">ビジュアルコンテンツデザイン</a></li>
+        <li><a href="css_sample1.html">筋トレ</a></li>
+        <li><a href="css_sample2.html">ゲーム</a></li>
+        <li><a href="css_sample3.html">スノボ</a></li>
       </ul>
     </div>
   </header>
