--- a/css_sample1.html
+++ b/css_sample1.html
@@ -6,8 +6,10 @@
 <title>HTMLへの組み込みサンプル１</title>
  </head>
  <body>
-   <h1>Cascading Style Sheets</h1>
+   <h1>週６でジムに通っています。
+       ジムの成果を最大限出したくて、毎日自炊するようになりました。</h1>
  </body>
 
 </html>
+
 
