--- a/css_sample1.html
+++ b/css_sample1.html
@@ -6,10 +6,13 @@
 <title>HTMLへの組み込みサンプル１</title>
  </head>
  <body>
-   <h1>週６でジムに通っています。
-       ジムの成果を最大限出したくて、毎日自炊するようになりました。</h1>
+   <h1>週６でジムに通っています。<br>
+       ジムの成果を最大限出したくて、毎日自炊するようになりました。<br>
+       おかげさまで最近体つきの変化を実感できてます。
+   </h1>
  </body>
 
 </html>
+
 
 
