--- a/css_sample2.html
+++ b/css_sample2.html
@@ -7,8 +7,11 @@
 
  </head>
  <body>
-   <h1>Cascading Style Sheets</h1>
+   <h1>最近は主にVALORANTとShadowverseをやってます。<br>
+   　　やるのも好きですがプロの試合を見るのも好きです。<br>
+       VALORANTに関しては一回現地まで見に行きました。</h1>
  </body>
 </html>
+
 
 
