--- a/css_sample3.html
+++ b/css_sample3.html
@@ -5,6 +5,13 @@
 <meta charset="UTF-8">
 <title>HTMLへの組み込みサンプル３</title>
 </head>
+
+ <body>
+   <h1>今年の冬友人と一緒に行ってとてもはまりました。<br>
+   　　はまりすぎて今年の誕プレでスノボウェアを買ってもらいました。<br>
+       来年の冬が待ち遠しいです。</h1>
+ </body>
 </html>
+
 
 
