--- a/css_sample1.html
+++ b/css_sample1.html
@@ -10,9 +10,14 @@
        ジムの成果を最大限出したくて、毎日自炊するようになりました。<br>
        おかげさまで最近体つきの変化を実感できてます。
    </h1>
+﻿<!-- トップページへの戻りリンク -->
+  <p class="back"><a href="index.html">← メインページへ戻る</a></p>
+
+   <img src="DUMBBELL_MAN.PNG" alt="サンプル画像1" class="photo">
  </body>
 
 </html>
+
 
 
 
