--- a/css_sample2.html
+++ b/css_sample2.html
@@ -10,8 +10,13 @@
    <h1>最近は主にVALORANTとShadowverseをやってます。<br>
    　　やるのも好きですがプロの試合を見るのも好きです。<br>
        VALORANTに関しては一回現地まで見に行きました。</h1>
+
+     <!-- トップページへの戻りリンク -->
+  <p class="back"><a href="index.html">← メインページへ戻る</a></p>
+    <img src="videogame_boy.jpg" alt="サンプル画像2" class="photo">
  </body>
 </html>
+
 
 
 
