--- a/css_sample3.html
+++ b/css_sample3.html
@@ -10,8 +10,14 @@
    <h1>今年の冬友人と一緒に行ってとてもはまりました。<br>
    　　はまりすぎて今年の誕プレでスノボウェアを買ってもらいました。<br>
        来年の冬が待ち遠しいです。</h1>
+  <!-- トップページへの戻りリンク -->
+  <p class="back"><a href="index.html">← メインページへ戻る</a></p>
+
+  <!-- 画像（同じフォルダまたはimagesフォルダから） -->
+  <img src="jiko_snow_snowboard.jpg" alt="サンプル画像3" class="photo">
  </body>
 </html>
+
 
 
 
