--- a/css_sample1.html
+++ b/css_sample1.html
@@ -1,23 +1,25 @@
-﻿<!doctype html>
-<html>
+<!doctype html>
+<html lang="ja">
 <head>
-<link rel="stylesheet" href="design.css">
-<meta charset="UTF-8">
-<title>HTMLへの組み込みサンプル１</title>
- </head>
- <body>
-   <h1>週６でジムに通っています。<br>
-       ジムの成果を最大限出したくて、毎日自炊するようになりました。<br>
-       おかげさまで最近体つきの変化を実感できてます。
-   </h1>
-﻿<!-- トップページへの戻りリンク -->
-  <p class="back"><a href="index.html">← メインページへ戻る</a></p>
+  <meta charset="UTF-8">
+  <title>筋トレ</title>
+  <link rel="stylesheet" href="design.css">  
+</head>
+<body>
 
-   <img src="DUMBBELL_MAN.PNG" alt="サンプル画像1" class="photo">
- </body>
+  <!-- 戻るリンク -->
+  <p class="back"><a href="index.html">← メインページに戻る</a></p>
 
+  <!-- タイトル -->
+  <h1>筋トレ</h1>
+
+  <!-- 本文 -->
+  <h1>週６でジムに通っています。<br>
+      ジムの成果を最大限出したくて、毎日自炊するようになりました。<br>
+      おかげさまで最近体つきの変化を実感できてます。
+
+  <!-- 一番下に画像 -->
+  <img src="images/ganbaru.png" alt="がんばろう！と拳を上げる女性のイラスト" class="photo">
+
+</body>
 </html>
-
-
-
-
