--- a/css_sample2.html
+++ b/css_sample2.html
@@ -1,22 +1,25 @@
-﻿<!doctype html>
-<html>
+<!doctype html>
+<html lang="ja">
 <head>
-   <link rel="stylesheet" href="design.css">
-<meta charset="UTF-8">
-<title>HTMLへの組み込みサンプル２</title>
+  <meta charset="UTF-8">
+  <title>ゲーム</title>
+  <link rel="stylesheet" href="design.css">  
+</head>
+<body>
 
- </head>
- <body>
-   <h1>最近は主にVALORANTとShadowverseをやってます。<br>
-   　　やるのも好きですがプロの試合を見るのも好きです。<br>
-       VALORANTに関しては一回現地まで見に行きました。</h1>
+  <!-- 戻るリンク -->
+  <p class="back"><a href="index.html">← メインページに戻る</a></p>
 
-     <!-- トップページへの戻りリンク -->
-  <p class="back"><a href="index.html">← メインページへ戻る</a></p>
-    <img src="videogame_boy.jpg" alt="サンプル画像2" class="photo">
- </body>
+  <!-- タイトル -->
+  <h1>ゲーム</h1>
+
+  <!-- 本文 -->
+    <h1>最近は主にVALORANTとShadowverseをやってます。<br>
+    やるのも好きですがプロの試合を見るのも好きです。<br>
+    VALORANTに関しては一回現地まで見に行きました。</h1>
+
+  <!-- 一番下に画像 -->
+  <img src="images/ganbaru.png" alt="がんばろう！と拳を上げる女性のイラスト" class="photo">
+
+</body>
 </html>
-
-
-
-
