--- a/css_sample1.html
+++ b/css_sample1.html
@@ -19,7 +19,8 @@
       おかげさまで最近体つきの変化を実感できてます。
 
   <!-- 一番下に画像 -->
-  <img src="images/ganbaru.png" alt="がんばろう！と拳を上げる女性のイラスト" class="photo">
+  <img src="dumbbel_man.png" alt="サンプルイラスト" class="photo">
 
 </body>
 </html>
+
