--- a/css_sample2.html
+++ b/css_sample2.html
@@ -19,7 +19,8 @@
     VALORANTに関しては一回現地まで見に行きました。</h1>
 
   <!-- 一番下に画像 -->
-  <img src="images/ganbaru.png" alt="がんばろう！と拳を上げる女性のイラスト" class="photo">
+  <img src="videogame_boy.png" alt="  サンプルイラスト" class="photo">
 
 </body>
 </html>
+
