--- a/css_sample3.html
+++ b/css_sample3.html
@@ -1,23 +1,25 @@
-﻿<!doctype html>
-<html>
+<!doctype html>
+<html lang="ja">
 <head>
- <link rel="stylesheet" href="design.css">
-<meta charset="UTF-8">
-<title>HTMLへの組み込みサンプル３</title>
+  <meta charset="UTF-8">
+  <title>スノボ</title>
+  <link rel="stylesheet" href="design.css">  <!-- pages配下なら ../design.css -->
 </head>
+<body>
 
- <body>
-   <h1>今年の冬友人と一緒に行ってとてもはまりました。<br>
-   　　はまりすぎて今年の誕プレでスノボウェアを買ってもらいました。<br>
-       来年の冬が待ち遠しいです。</h1>
-  <!-- トップページへの戻りリンク -->
-  <p class="back"><a href="index.html">← メインページへ戻る</a></p>
+  <!-- 戻るリンク -->
+  <p class="back"><a href="index.html">← メインページに戻る</a></p>
 
-  <!-- 画像（同じフォルダまたはimagesフォルダから） -->
-  <img src="jiko_snow_snowboard.jpg" alt="サンプル画像3" class="photo">
- </body>
+  <!-- タイトル -->
+  <h1>スノボ</h1>
+
+  <!-- 本文 -->
+  <h1>今年の冬友人と一緒に行ってとてもはまりました。<br>
+      はまりすぎて今年の誕プレでスノボウェアを買ってもらいました。<br>
+      来年の冬が待ち遠しいです。</h1>
+
+  <!-- 一番下に画像 -->
+  <img src="jiko_snow_snowboard.png" alt="サンプルイラスト" class="photo">
+
+</body>
 </html>
-
-
-
-
