--- a/css_sample1.html
+++ b/css_sample1.html
@@ -19,8 +19,9 @@
       おかげさまで最近体つきの変化を実感できてます。
 
   <!-- 一番下に画像 -->
-  <img src="dumbbel_man.png" alt="サンプルイラスト" class="photo">
+  <img src="dumbbell_man.png" alt="サンプルイラスト" class="photo">
 
 </body>
 </html>
+
 
