--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>私の趣味</title>
-<link rel="stylesheet" href="design.css?v=4">
+<link rel="stylesheet" href="design.css">
 </head>
 <body>
   <header>
